; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_vmac.c_vmac_setkey.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_vmac.c_vmac_setkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_shash = type { i32 }
%struct.vmac_ctx_t = type { i32 }

@VMAC_KEY_LEN = common dso_local global i32 0, align 4
@CRYPTO_TFM_RES_BAD_KEY_LEN = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crypto_shash*, i32*, i32)* @vmac_setkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vmac_setkey(%struct.crypto_shash* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.crypto_shash*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.vmac_ctx_t*, align 8
  store %struct.crypto_shash* %0, %struct.crypto_shash** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.crypto_shash*, %struct.crypto_shash** %5, align 8
  %10 = call %struct.vmac_ctx_t* @crypto_shash_ctx(%struct.crypto_shash* %9)
  store %struct.vmac_ctx_t* %10, %struct.vmac_ctx_t** %8, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @VMAC_KEY_LEN, align 4
  %13 = icmp ne i32 %11, %12
  br i1 %13, label %14, label %20

14:                                               ; preds = %3
  %15 = load %struct.crypto_shash*, %struct.crypto_shash** %5, align 8
  %16 = load i32, i32* @CRYPTO_TFM_RES_BAD_KEY_LEN, align 4
  %17 = call i32 @crypto_shash_set_flags(%struct.crypto_shash* %15, i32 %16)
  %18 = load i32, i32* @EINVAL, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %4, align 4
  br label %24

20:                                               ; preds = %3
  %21 = load i32*, i32** %6, align 8
  %22 = load %struct.vmac_ctx_t*, %struct.vmac_ctx_t** %8, align 8
  %23 = call i32 @vmac_set_key(i32* %21, %struct.vmac_ctx_t* %22)
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %20, %14
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local %struct.vmac_ctx_t* @crypto_shash_ctx(%struct.crypto_shash*) #1

declare dso_local i32 @crypto_shash_set_flags(%struct.crypto_shash*, i32) #1

declare dso_local i32 @vmac_set_key(i32*, %struct.vmac_ctx_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
